crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@multi_assign_no_flatten_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/multi_assign_no_flatten_fail.tapir
---
Error: Function call must return exactly 1 value here, but got 2
   ╭─[ multi_assign_no_flatten_fail.tapir:6:15 ]
   │
 6 │ var a, b, c = returns_two(), 3;
   │               ──────┬──────  
   │                     ╰──────── Function must return 1 value here
───╯
Error: Expected 3 expressions, but got 2 of them
   ╭─[ multi_assign_no_flatten_fail.tapir:6:1 ]
   │
 6 │ var a, b, c = returns_two(), 3;
   │           ┬  
   │           ╰── No value for this variable
   │ 
   │ Help: When assigning to multiple variables, both sides of the '=' must have the same number of arguments
───╯
